--- a/package.json
+++ b/package.json
@@ -3,14 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@iconify/icons-mdi": "^1.2.46",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
+    "gh-pages": "^5.0.0",
+    "google-map-react": "^2.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
-    "react-router-dom": "^6.11.2",
+    "react-router-dom": "^5.0.0",
     "react-scripts": "^5.0.1",
     "swiper": "^9.3.2",
     "uuidv4": "^6.2.13",
@@ -41,6 +44,7 @@
     ]
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^14.1.0"
+    "@angular-devkit/build-angular": "^14.1.0",
+    "@iconify/react": "^4.1.0"
   }
 }
