--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
+    "emailjs-com": "^3.2.0",
     "gh-pages": "^5.0.0",
     "google-map-react": "^2.2.1",
     "react": "^18.2.0",
@@ -46,5 +47,9 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "^14.1.0",
     "@iconify/react": "^4.1.0"
-  }
+  },
+  "description": "Nirmal Toys Project",
+  "main": "index.js",
+  "author": "",
+  "license": "ISC"
 }
